--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,29 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Burger</title>
-</head>
-
-<body>
     <div class="container">
         <div class="row">
             <div class="col-lg-4">
                 <h1>Burger To Eat</h1>
 
                 <ul>
-                    {{#each Burgers}}
+                    {{#each burger}} {{#unless this.devoured}}
                     <li>
                         <p>
-                            {{this.id}}. {{this.Burger}}
+                            {{this.id}}. {{this.burger_name}}
 
-                            <button data-Burgerid="{{this.id}}" class="delBurger">Delete</button>
+                            <button data-burgerid="{{this.id}}" class="devoBurger">devoured</button>
                         </p>
                     </li>
-                    {{/each}}
+                    {{/unless}} {{/each}}
                 </ul>
             </div>
             <div class="col-lg-4"></div>
@@ -31,13 +21,13 @@
                 <h1>devoured Burger </h1>
 
                 <ul>
-                    {{#each devoBurgers}}
+                    {{#each burgers}} {{#if this.devoured}}
                     <li>
                         <p>
-                            {{this.id}}. {{this.Burger}}
+                            {{this.id}}. {{this.burger_name}}
                         </p>
                     </li>
-                    {{/each}}
+                   {{/if}} {{/each}}
                 </ul>
             </div>
         </div>
@@ -46,18 +36,24 @@
             <div class="col-lg-4">
                 <h2>Add a Burger </h2>
                 <form id="addBurger" class="button-size">
-                    <textarea type="text" name="burger"></textarea>
-                    <button type="submit">Save Burger!</button>
+                    <textarea type="text" name="burgers"></textarea>
+                    <button id="submit" type="submit">Save Burger!</button>
                 </form>
             </div>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+    {{!-- <script src="../public/app.js"></script> --}}
+    {{!-- <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-</body>
+        crossorigin="anonymous"></script> --}}
 
-</html>
+
+
+
+
+         
+
+
