--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,4 @@
-
-    <div class="container">
+<div class="container">
         <div class="row">
             <div class="col-lg-4">
                 <h1>Burger To Eat</h1>
@@ -19,9 +18,9 @@
             <div class="col-lg-4"></div>
             <div class="col-lg-4">
                 <h1>devoured Burger </h1>
-
+                
                 <ul>
-                    {{#each burgers}} {{#if this.devoured}}
+                    {{#each burger}} {{#if this.devoured}}
                     <li>
                         <p>
                             {{this.id}}. {{this.burger_name}}
@@ -44,16 +43,9 @@
     </div>
     {{!-- <script src="../public/app.js"></script> --}}
     {{!-- <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script> --}}
-
-
-
-
-
-         
 
 
