--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,8 @@
                 <h1>Burger To Eat</h1>
 
                 <ul>
-                    {{#each burger}} {{#unless this.devoured}}
+                    {{#each burger}} 
+                    {{#unless this.devoured}}
                     <li>
                         <p>
                             {{this.id}}. {{this.burger_name}}
@@ -12,7 +13,8 @@
                             <button data-burgerid="{{this.id}}" class="devoBurger">devoured</button>
                         </p>
                     </li>
-                    {{/unless}} {{/each}}
+                    {{/unless}}
+                     {{/each}}
                 </ul>
             </div>
             <div class="col-lg-4"></div>
@@ -20,13 +22,15 @@
                 <h1>devoured Burger </h1>
                 
                 <ul>
-                    {{#each burger}} {{#if this.devoured}}
+                    {{#each burger}} 
+                    {{#if this.devoured}}
                     <li>
                         <p>
                             {{this.id}}. {{this.burger_name}}
                         </p>
                     </li>
-                   {{/if}} {{/each}}
+                   {{/if}} 
+                   {{/each}}
                 </ul>
             </div>
         </div>
@@ -41,11 +45,5 @@
             </div>
         </div>
     </div>
-    {{!-- <script src="../public/app.js"></script> --}}
-    {{!-- <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script> --}}
-
+    
 
