--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,7 +11,7 @@
                         {{this.id}}. {{this.burger_name}}
 
                         <span class="col-lg-2">  
-                            <button class="btn btn-primary devoBurger" data-burgerid="{{this.id}}">Devour</button>
+                            <button class="btn btn-primary devoBurger" data-burgerid="{{this.id}}">Devour it!</button>
                       </span>
                     </p>
                 </li>
